# AoCS-threads

./: .gitignore  README.md
Task5/: CMakeLists.txt  main.cpp
Task5/entities/: Island.cpp  Island.h  PirateGang.cpp  PirateGang.h
Task5/tests/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
